# hyperprophet

./: .editorconfig  CHANGELOG.md  LICENSE  README.md  dev-requirements.txt  mkdocs.yml  requirements.txt  runtests.sh  setup.cfg
docs/: getting-started.md  index.md  quick-start.md  release-notes.md
hyperprophet/: __init__.py  engines.py  forecaster.py
hyperprophet/fbprophet/: __init__.py  forecaster.py  make_holidays.py  plot.py
tests/: conftest.py  test_forecast.yml  test_make_future_dataframe.yml
