[metadata]
name = hyperprophet
url = https://hyperprophet.com/
version = 0.1.4
description = The easiest way to run forecast multiple time-series using Prophet at Scale
long_description = file: README.md
long_description_content_type = text/markdown
keywords = forecast, prophet
license = MIT License
author = Anand Chitipothu
author_email = anandology@gmail.com

classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =
    numpy>=1.19.1
    pandas>=1.1.0
    LunarCalendar>=0.0.9
    convertdate>=2.2.1
    holidays>=0.10.3
    python-dateutil>=2.8.0
    pyarrow>=1.0.0
